# appir

./: .gitignore  Dockerfile  README.md  REAME.md  main.py  pyproject.toml  setup.cfg  uwsgi.ini  wsgi.py
web/: main.py  web_handler.py  web_log_handler.py
web/static/: spa.js  style.css
web/templates/: index.html
wipe/: __init__.py  appir.py  logger.py  managers.py  mixins.py  name_generator.py  params.py  patches.py  threads.py  wipe.py
wipe/browsers/: __init__.py  abc.py  abc_driver.py  chrome.py  firefox.py
wipe/strategies/: __init__.py  abc_strategy.py  enter_exit_strategy.py  enter_refresh_strategy.py  fill_strategy.py  flood_strategy.py  youtube_strategy.py
